added the first blog

--- a/newRepo.html
+++ b/newRepo.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New repo</title>
+    <link rel="stylesheet" href="newrepo.css">
 </head>
 <body>
+    <div>
+        <h2>me first website</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dignissimos incidunt obcaecati molestiae nemo quae, placeat sit esse perferendis? Officia, temporibus voluptas! Commodi alias error est laborum quaerat perspiciatis animi!</p>
+    </div>
     
 </body>
 </html>
