the third update

--- a/newRepo.html
+++ b/newRepo.html
@@ -26,6 +26,17 @@
         <h2>me first website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dignissimos incidunt obcaecati molestiae nemo quae, placeat sit esse perferendis? Officia, temporibus voluptas! Commodi alias error est laborum quaerat perspiciatis animi!</p>
     </div>
+
+    <h3>HOW TO POUSH INCRIMENTAL CODE</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio amet quo ducimus provident, ipsa quos delectus illum suscipit, asperiores assumenda eligendi ea labore. Earum, minima exercitationem a amet fugit consequatur?</p>
+    <ul>
+        <li>tamim</li>
+        <li>tamim</li>
+        <li>tamim</li>
+        <li>tamim</li>
+        <li>tamim</li>
+        <li>tamim</li>
+    </ul>
     
 </body>
 </html>
